--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,50 +1,27 @@
-<<<<<<< HEAD
 [tool.poetry]
-name = "django-serializers"
-version = "0.1.0"
-description = ""
-authors = ["hsanfilippo <henrique.sanfilippo@gmail.com>"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-pytest = "^8.3.2"
-factory-boy = "^3.3.0"
-pytest-django = "^4.8.0"
-django = "^5.1"
-django-rest-framework = "^0.1.0"
-djangorestframework = "^3.15.2"
-django-extensions = "^3.2.3"
-django-debug-toolbar = "^4.4.6"
-
-
-[build-system]
-requires = ["poetry-core"]
-=======
-[project]
 name = "bookstore"
 version = "0.1.0"
-description = "bookstore API"
-authors = [
-    {name = "Matheus-C-Machado",email = "matheusmonster08@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "django (>=5.2.5,<6.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)",
-    "django-rest-framework (>=0.1.0,<0.2.0)",
-    "django-extensions (>=4.1,<5.0)"
-]
+description = "Bookstore API"
+authors = ["Matheus <matheusmonster08@gmail.com>"]
 
-[tool.poetry]
+[tool.poetry.dependencies]
+python = "^3.7"
+Django = "^3.2.8"
+django-rest-framework = "^0.1.0"
+django-extensions = "^3.1.3"
+django-debug-toolbar = "^3.2.2"
+psycopg2-binary = "^2.9.2"
+autopep8 = "^1.6.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
+gunicorn = "^20.1.0"
+whitenoise = "^5.3.0"
+gitpython = "^3.1.37"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.4.1"
-factory-boy = "^3.3.3"
-pytest-django = "^4.11.1"
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+factory-boy = "^3.2.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
->>>>>>> fc4bcb1 (test)
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
