--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ gitpython = "^3.1.37"
 pytest = "^6.2.5"
 factory-boy = "^3.2.0"
 
+[tool.poetry.group.dev.dependencies]
+django-debug-toolbar = "<4.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
