--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 name = "django-serializers"
 version = "0.1.0"
 description = ""
-authors = ["hsanfilippo <henrique.sanfilippo@gmail.com>"]
+authors = ["Matheus-C-Machado <matheusmonster08@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -11,7 +11,7 @@ python = "^3.10"
 pytest = "^8.3.2"
 factory-boy = "^3.3.0"
 pytest-django = "^4.8.0"
-django = "^5.1"
+django = "^5.1"+
 django-rest-framework = "^0.1.0"
 djangorestframework = "^3.15.2"
 django-extensions = "^3.2.3"
