--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1"
+
     steps:
     - uses: actions/checkout@v2
 
@@ -24,6 +27,7 @@ jobs:
         python -m ensurepip
         python -m pip install --upgrade pip
         python -m pip install --upgrade poetry
+
     - name: View poetry --help
       run: poetry --help
 
