--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install --upgrade poetry
 
     - name: Install dependencies
-      run: python -m poetry install --with dev
+      run: python -m poetry install 
 
     - name: Set environment variables
       run: |
