--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1"
       SECRET_KEY: "dummysecretkey"
-      DEBUG: "True"
+      DEBUG: "0"
 
     steps:
       - uses: actions/checkout@v2
