--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ factory-boy = "^3.3.3"
 pytest-django = "^4.11.1"
 flake8 = "^7.3.0"
 importlib-metadata = "^8.7.0"
+django-debug-toolbar = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
